supervisor-macros/tests/ui/compile_fail/duplicate_name.stderr
error: duplicate node/pool name `A`
 --> tests/ui/compile_fail/duplicate_name.rs:9:10
  |
9 |     node A = Pause, deps: [];
  |          ^
